# skala

./: .pre-commit-config.yaml  AGENTS.md  CITATION.cff  README.md  environment-cpu.yml  environment-gpu.yml  environment.yml  pyproject.toml
.github/workflows/: docs.yml  examples.yml  test.yml
docs/: index.rst  installation.rst
docs/gauxc/: c-library.rst  cpp-library.rst  fortran-library.rst  index.rst  installation.rst
docs/pyscf/: gpu4pyscf.rst  scf_settings.ipynb  singlepoint.ipynb
examples/c/gauxc_integration/: CMakeLists.txt
examples/c/gauxc_integration/app/: main.c
examples/c/gauxc_integration/cmake/: skala-dep-versions.cmake  skala-gauxc.cmake  skala-hdf5.cmake
examples/cpp/cpp_integration/: README.md
examples/cpp/gauxc_integration/cmake/: skala-dep-versions.cmake  skala-gauxc.cmake
examples/fortran/gauxc_integration/: CMakeLists.txt  environment-mpi.yml  environment-openmp.yml
examples/fortran/gauxc_integration/app/: main.F90
examples/fortran/gauxc_integration/cmake/: skala-dep-versions.cmake  skala-gauxc.cmake  skala-hdf5.cmake
src/skala/ase/: calculator.py
src/skala/foundry/: client.py  schemas.py
src/skala/functional/: __init__.py  base.py  load.py  model.py
src/skala/pyscf/: dft.py  features.py  gradients.py  numint.py  retry.py
tests/: test_model.py  test_nuclear_gradients.py  test_pyscf_classes.py  test_scf_retry.py  test_traditional.py
